# zephyr

./: .gitignore  CMakeLists.txt  Kconfig  motor_build.sh  west.yml
drivers/: CMakeLists.txt  Kconfig
drivers/motor_drive/: CMakeLists.txt  Kconfig  l298.c
drivers/motor_drive_encoder/: CMakeLists.txt  Kconfig  encoder.c
dts/bindings/motor_drive/: motor-drive.yaml
dts/bindings/motor_drive_encoder/: motor-drive-encoder.yaml
include/zephyr/drivers/: motor_drive.h  motor_drive_encoder.h
motor_control/: CMakeLists.txt  Kconfig  prj.conf
samples/boards/raspberrypi/rpi_pico/uart_pio/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/boards/raspberrypi/rpi_pico/uart_pio/boards/: rpi_pico.overlay
samples/boards/raspberrypi/rpi_pico/uart_pio/src/: common.h  encoder.c  main.c  pid.c  usb.c
